--- a/src/app/explore-container/explore-container.component.html
+++ b/src/app/explore-container/explore-container.component.html
@@ -1,4 +1,7 @@
 <div id="container">
   <strong>{{ name }}</strong>
+  <ion-button (click)="check()">
+    检查更新
+  </ion-button>
   <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
 </div>
